# yodawg

./: AGENTS.md  MANIFEST.in  TODO  pyproject.toml
src/paper/: cli.py  download.py  logging.py
src/paper/sources/: nasa.py  reddit.py  wallhaven.py
src/yodawg/: cli.py  download.py
src/yodawg/sources/: reddit.py  wallhaven.py
