[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yodawg"
version = "0.3.0"
description = "Download wallpapers from Reddit and Wallhaven"
dependencies = ["requests", "aiohttp"]

[project.scripts]
yodawg = "yodawg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
